--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        </style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +30,7 @@
             <h2>Colors</h2>
             <div class="color-scheme">
                 <div class="color-box primary-color"></div>
-                <p><strong>Primary Color:</strong> Blue</p>
+                <p><strong>Primary Color:</strong>#3233FA</p>
 
                 <div class="color-box secondary-color"></div>
                 <p><strong>Secondary Color:</strong> Blue</p>
