--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,15 +4,15 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
+  <title>Site Plan For Rafting</title>
+  <link rel="stylesheet" href="site-plan.css" >
 </head>
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h1> Site Plan</h1>
+    <h2>Calvin Roper</h2>
+    <h2>WDD 130</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,18 +20,26 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>Welcome to my white water rafting website! The purpose for this website is to show the many wonderful aspects of white water rafting.
+      I will highlight some of the best white water rafting sites in Costa Rica! I will also highlight some of the safety measure, places to stay, and pricing 
+      of these one of a kind adventures! I want to bring families together while experiencing the wonders of Costa Rica. 
+    </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>My key audience is those that are traveling to Costa Rica. Costa Rica is one of the premier white water rafting locations
+      in the entire world! Generally more tourists come from either The United States or Canada. 
+      Because of this fact, they will be my main focus with respect to the nationality of customers. I will also try to reach more people within
+      the age range between 13 to 35 years old. I will be focusing more on families too. Remembering these factors I want to include more pictures 
+      of happy families rafting. I also want to have some lighter colors that are more family friendly, rather than darker colors.
+        </p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="DALL·E 2024-09-28 11.23.43.webp" width="200" height="200" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -42,7 +50,7 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
+    <a href=https://color.adobe.com/
       target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
 
     <table class="colors">
@@ -54,10 +62,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">[#00F5D]</td>
+        <td class="secondary">[#2DD1F7]</td>
+        <td class="accent1">[#43FA65]</td>
+        <td class="accent2">[#2753FA]</td>
       </tr>
     </table>
 
@@ -67,19 +75,21 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Poppins
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Merriweather, serif;
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
-      The best Whitewater Rafting in Colorado, White Water Rafting Company
-      offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
-      Springs. Since 1974, we have been family owned and operated, rafting the
-      Shoshone section of Glenwood Canyon and beyond.
+    The best Whitewater Rafting in Colorado, White Water Rafting Company
+     offers rafting on the Colorado and Roaring Fork Rivers in Glenwood Springs.
+     Since 1974, we have been family owned and operated,
+     rafting the Shoshone section of Glenwood Canyon and beyond.
+    </p>
+      
     </p>
     <h3>Colored paragraph example</h3>
     <p class="colored">
@@ -95,7 +105,7 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="#">Locations</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr />
@@ -103,7 +113,7 @@
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        [Page2]
+        Page2
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
@@ -120,7 +130,7 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Page 2</h3>
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
