I added a logo at the bottom of the page.

--- a/wire_frame_practice.html
+++ b/wire_frame_practice.html
@@ -19,7 +19,7 @@
                 <li><a href="aboutus.html">About</a></li>
                 <li><a href="contactus.html">Contact Us</a></li>
                 <li><a href="locations.html">Locations</a></li>
-                <li><a href="prices.html">Our prices</a></li>
+                <li><a href="prices.html">Our Prices</a></li>
             </ul>
         </nav>
     </header>
@@ -69,6 +69,7 @@
     </section>
 
     <footer>
+        <img src="wwr/images/logo2.webp" width="35" alt="This is my logo">
         <p> Author: Calvin Roper <a href="mailto:calvin.roper18@gmail.com">calvin.roper18@gmail.com</a></p>
         <p>&copy; 2024 Calvin Roper</p>
         <img src="https://placehold.co/50x50" alt="Placeholder Image">
