--- a/wwr/ice/week4.html
+++ b/wwr/ice/week4.html
@@ -18,7 +18,7 @@
         <li>Baptism by immersion for the remission of sins</li>
         <li>Laying on of hands for the gift of the Holy Ghost</li>
     </ol>
-    <img id="pres.nelson" src="styles/presrussel.jpeg" width="30%" alt="Russel Nelson">
+    <img id="pres.nelson" src="styles/presrussel.jpeg" width="30%;" alt="Russel Nelson">
     <h2>"Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</h2>
 
     <footer class="all black"> Russel M. Nelson President of the Church of Jesus Christ of Latter-day Saints</footer>
