I finished adding all the elements from the css.

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+<div id="content">
 <header>
     <a id="logo_link" href="index.html">
         <img class="logo" src="images/logo2.webp" alt="Logo image">
@@ -47,6 +48,7 @@
         <img class="icon" src="images/oars.png" alt="oars icon">
         <h2>Rapids</h2>
     </section>
+    <div id="background"></div>
     <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
     <section class="msg">
         <h2>The Thrill of Your Life!!!</h2>
@@ -70,5 +72,6 @@
         </a>
     </div>
 </footer>
+</div>
 </body>
 </html>
