--- a/ice/week4.html
+++ b/ice/week4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 04 ICE</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/ice4.css">
    
 </head>
 <body>
@@ -18,7 +18,7 @@
         <li>Baptism by immersion for the remission of sins</li>
         <li>Laying on of hands for the gift of the Holy Ghost</li>
     </ol>
-    <img id="pres.nelson" src="styles/presrussel.jpeg" style="width:30%;" alt="Russel Nelson">
+    <img id="pres.nelson" src="images/presrussel.jpeg" style="width:30%;" alt="Russel Nelson">
     <h2>"Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</h2>
 
     <footer class="all black"> Russel M. Nelson President of the Church of Jesus Christ of Latter-day Saints</footer>
