I have added a photo and a h1 tag to my Rivers subpage.

--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -20,7 +20,11 @@
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
-    <img id="wire" src="images/wireframe.webp" alt="wireframe">
+    <div class="content_rivers">   
+        <h1 class="title2">Colorado River</h1>
+        <img class="main_photo2" src="images/grand_canyon.webp" alt="photo of grand canyon">
+        <p class="p2">This is my second p</p>
+    </div>
     <footer>
         <p>Dry Oar &copy; 2024 - Calvin Roper</p>
         <p><a href="site-plan-rafting.html"></a>Site Plan</p>
