I rounded the edges. I also added a photo and all of the other aspects of the ICE challenge.

--- a/ice/week9.html
+++ b/ice/week9.html
@@ -15,15 +15,15 @@
         <p id="paragraph">would be some text to go here and tell you aabout this swesome article that they should definitely read. This would be some text to go here and tell you about this awesome article that they should definitely read. This would be some text to go here. </p>
         <div class="items">
             <div class="box1">
-                <div class="grid1"> 5m</div>
+                <b class="grid1"> 5m</b>
                 <div class="grid2">READ</div>
             </div>
             <div class="box2">
-                <div class="grid3">2031</div>
+                <b class="grid3">2031</b>
                 <div class="grid4">VIEWS</div>
             </div>
             <div class="box3">
-                <div class="grid5">15</div>
+                <b class="grid5">15</b>
                 <div class="grid6">COMMENTS</div>
             </div>
         </div>
