I added two paragraphs to my rivers page!

--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -23,7 +23,8 @@
     <div class="content_rivers">   
         <h1 class="title2">Colorado River</h1>
         <img class="main_photo2" src="images/grand_canyon.webp" alt="photo of grand canyon">
-        <p class="p2">This is my second p</p>
+        <p class="p2">This is one of the most iconic rafting destinations in the entire U.S.A. It is one of the few places where you can spend days going on rafting adventures! Because of the giant scope of the river it has much to offer for all those who love rafting. Those who are profresstionals along with those who have less experiance.</p>
+        <p class="p2">The Colorado River also offers one of the best nature experiences for those who love the thrill of adventure. It is home to many waterfalls, ancient Native American ruins, and diverse wildlife. The magnituide of the river also makes it a perfect spot to have solitude with nature!</p>
     </div>
     <footer>
         <p>Dry Oar &copy; 2024 - Calvin Roper</p>
