I added more to my p. I also added an ol to my webpage. I also added a few things to the Css file to make it more responsive.

--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -23,8 +23,17 @@
     <div class="content_rivers">   
         <h1 class="title2">Colorado River</h1>
         <img class="main_photo2" src="images/grand_canyon.webp" alt="photo of grand canyon">
-        <p class="p2">This is one of the most iconic rafting destinations in the entire U.S.A. It is one of the few places where you can spend days going on rafting adventures! Because of the giant scope of the river it has much to offer for all those who love rafting. Those who are profresstionals along with those who have less experiance.</p>
-        <p class="p2">The Colorado River also offers one of the best nature experiences for those who love the thrill of adventure. It is home to many waterfalls, ancient Native American ruins, and diverse wildlife. The magnituide of the river also makes it a perfect spot to have solitude with nature!</p>
+        <div class="p2">
+            <p>This is one of the most iconic rafting destinations in the entire United States! It's one of the few places where you can spend multiple days enjoying thrilling rafting adventures. The vast scope of the river offers something for everyone—whether you're a seasoned professional or just starting out with less experience, this destination has it all.</p>
+            <p>The Colorado River also provides one of the most incredible nature experiences for adventure enthusiasts. It is home to stunning waterfalls, ancient Native American ruins, and a rich variety of wildlife. The vastness of the river makes it an ideal destination for those seeking both thrilling adventures and peaceful solitude in nature.</p>
+            <p class="pspecial"> These are a few of the most important things to know while planning your once in a life adventure down the Colorado River:</p>
+            <ol class="list">
+                <li>Understand the different sections of the river</li>
+                <li>Plan to have the correct permits</li>
+                <li>Seasonal Considerations</li>
+
+            </ol>
+        </div>
     </div>
     <footer>
         <p>Dry Oar &copy; 2024 - Calvin Roper</p>
