--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -20,6 +20,7 @@
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
+    </div>
     <div class="content_rivers">   
         <h1 class="title2">Colorado River</h1>
         <img class="main_photo2" src="images/grand_canyon.webp" alt="photo of grand canyon">
@@ -35,21 +36,23 @@
             </ol>
         </div>
     </div>
-    <footer>
-        <p>Dry Oar &copy; 2024 - Calvin Roper</p>
-        <p><a href="site-plan-rafting.html"></a>Site Plan</p>
-        <p><a href="contactus.html">Contact Us</a></p>
-        <div class="social">
-            <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
-        </div>
-    </footer>
+
+</body>
+<footer>
+    <p>Dry Oar &copy; 2024 - Calvin Roper</p>
+    <p><a href="site-plan-rafting.html"></a>Site Plan</p>
+    <p><a href="contactus.html">Contact Us</a></p>
+    <div class="social">
+        <a href="https://facebook.com" target="_blank">
+            <img src="images/facebook.png" alt="fb icon">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+            <img src="images/twitter.png" alt="twitter icon">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <img src="images/instagram.png" alt="instagram icon">
+        </a>
+    </div>
+</footer>
 </body>
 </html>
